--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
+    "react-script-hook": "^1.7.2",
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
     "sweetalert2": "^11.7.18",
