--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -13,9 +13,13 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "clsx": "^2.0.0",
+    "google-map-react": "^2.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-fontawesome": "^1.7.1",
+    "react-google-places-autocomplete": "^4.0.1",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.14.2",
     "react-script-hook": "^1.7.2",
     "react-scripts": "5.0.1",
