--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.14.2",
     "react-script-hook": "^1.7.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "sass": "^1.63.6",
     "sweetalert2": "^11.7.18",
     "sweetalert2-react-content": "^5.0.7",
