--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-script-hook": "^1.7.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
+    "react-toastify": "^9.1.3",
     "sass": "^1.63.6",
     "socket.io-client": "^4.7.2",
     "sweetalert2": "^11.7.18",
